--- a/EURS/EU_Rap_Show___Contact___EURapShow.html
+++ b/EURS/EU_Rap_Show___Contact___EURapShow.html
@@ -162,6 +162,15 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
               </div>
             </div>
           </div>
+          <div class="com-apple-iweb-widget-HTMLRegion" id="widget2" style="height: 286px; left: 806px; opacity: 1.00; position: absolute; top: 581px; width: 300px; z-index: 1; ">
+            <script type="text/javascript"><!--//--><![CDATA[//><!--
+    var widget2_htmlMarkupURL = ".//EU_Rap_Show___Contact___EURapShow_files/widget2_markup.html";
+//--><!]]></script>
+            <div id="widget2-htmlRegion" class="html_region_widget"></div>
+          </div>
+          <script type="text/javascript"><!--//--><![CDATA[//><!--
+new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResources', '.', {"emptyLook": false});
+//--><!]]></script>
           <div style="height: 1000px; line-height: 1000px; " class="spacer"> </div>
         </div>
         <div style="height: 300px; margin-left: 0px; position: relative; width: 1200px; z-index: 15; " id="footer_layer">
