--- a/EURS/EU_Rap_Show___Episodes___EURapShow/EU_Rap_Show___Episodes___EURapShow.html
+++ b/EURS/EU_Rap_Show___Episodes___EURapShow/EU_Rap_Show___Episodes___EURapShow.html
@@ -188,6 +188,15 @@ new Paste('widget2', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
               </div>
             </div>
           </div>
+          <div class="com-apple-iweb-widget-HTMLRegion" id="widget3" style="height: 284px; left: 815px; opacity: 1.00; position: absolute; top: 667px; width: 300px; z-index: 1; ">
+            <script type="text/javascript"><!--//--><![CDATA[//><!--
+    var widget3_htmlMarkupURL = "../EU_Rap_Show___Episodes___EURapShow/EU_Rap_Show___Episodes___EURapShow_files/widget3_markup.html";
+//--><!]]></script>
+            <div id="widget3-htmlRegion" class="html_region_widget"></div>
+          </div>
+          <script type="text/javascript"><!--//--><![CDATA[//><!--
+new Paste('widget3', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/SharedResources', '..', {"emptyLook": false});
+//--><!]]></script>
           <div style="height: 765px; line-height: 765px; " class="spacer"> </div>
         </div>
         <div style="height: 306px; margin-left: 0px; position: relative; width: 1200px; z-index: 15; " id="footer_layer">
