--- a/EURS/EU_Rap_Show___Playlist___EURapShow.html
+++ b/EURS/EU_Rap_Show___Playlist___EURapShow.html
@@ -490,6 +490,15 @@ new Paste('widget4', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
               </div>
             </div>
           </div>
+          <div class="com-apple-iweb-widget-HTMLRegion" id="widget5" style="height: 284px; left: 805px; opacity: 1.00; position: absolute; top: 656px; width: 300px; z-index: 1; ">
+            <script type="text/javascript"><!--//--><![CDATA[//><!--
+    var widget5_htmlMarkupURL = ".//EU_Rap_Show___Playlist___EURapShow_files/widget5_markup.html";
+//--><!]]></script>
+            <div id="widget5-htmlRegion" class="html_region_widget"></div>
+          </div>
+          <script type="text/javascript"><!--//--><![CDATA[//><!--
+new Paste('widget5', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResources', '.', {"emptyLook": false});
+//--><!]]></script>
           <div style="height: 1000px; line-height: 1000px; " class="spacer"> </div>
         </div>
         <div style="height: 300px; margin-left: 0px; position: relative; width: 1200px; z-index: 15; " id="footer_layer">
