--- a/EURS/EU_Rap_Show___Playlist___EURapShow.html
+++ b/EURS/EU_Rap_Show___Playlist___EURapShow.html
@@ -192,7 +192,7 @@
 </div>
           </div>
           <script type="text/javascript"><!--//--><![CDATA[//><!--
-new HeaderControls('widget0', 'Scripts/Widgets/HeaderControls', 'Scripts/Widgets/SharedResources', '.', {"showSubscribe": false, "gridID": "id2", "showBackToIndex": false, "showSlideshow": false, "feedURL": "http:\/\/EURS\/EU_Rap_Show___Playlist___EURapShow_files\/rss.xml", "entryCount": "0", "canvas controls": {"canvas_transport-left-N": "Media\/canvas_transport-left-N_03.png", "canvas_transport-right-D": "Media\/canvas_transport-right-D_03.png", "canvas_thumbs_off-S": "Media\/canvas_thumbs_off-S_03.png", "canvas_back": "Media\/canvas_back_03.png", "canvas_thumbs_off-N": "Media\/canvas_thumbs_off-N_03.png", "canvas_transport-right-N": "Media\/canvas_transport-right-N_03.png", "canvas_arrow-left-D": "Media\/canvas_arrow-left-D_03.png", "canvas_arrow-right": "Media\/canvas_arrow-right_03.png", "canvas_play": "Media\/canvas_play_03.png", "canvas_arrow-left": "Media\/canvas_arrow-left_03.png", "canvas_download": "Media\/canvas_download_03.png", "canvas_thumbs_on-S": "Media\/canvas_thumbs_on-S_03.png", "canvas_thumbs_on-N": "Media\/canvas_thumbs_on-N_03.png", "canvas_arrow-right-D": "Media\/canvas_arrow-right-D_03.png", "canvas_transport-left-D": "Media\/canvas_transport-left-D_03.png", "canvas_add": "Media\/canvas_add_03.png", "canvas_subscribe": "Media\/canvas_subscribe_03.png"}, "entriesPerPage": 105});
+new HeaderControls('widget0', 'Scripts/Widgets/HeaderControls', 'Scripts/Widgets/SharedResources', '.', {"canvas controls": {"canvas_transport-left-N": "Media\/canvas_transport-left-N_03.png", "canvas_transport-right-D": "Media\/canvas_transport-right-D_03.png", "canvas_thumbs_off-S": "Media\/canvas_thumbs_off-S_03.png", "canvas_back": "Media\/canvas_back_03.png", "canvas_thumbs_off-N": "Media\/canvas_thumbs_off-N_03.png", "canvas_transport-right-N": "Media\/canvas_transport-right-N_03.png", "canvas_arrow-left-D": "Media\/canvas_arrow-left-D_03.png", "canvas_arrow-right": "Media\/canvas_arrow-right_03.png", "canvas_play": "Media\/canvas_play_03.png", "canvas_arrow-left": "Media\/canvas_arrow-left_03.png", "canvas_download": "Media\/canvas_download_03.png", "canvas_thumbs_on-S": "Media\/canvas_thumbs_on-S_03.png", "canvas_thumbs_on-N": "Media\/canvas_thumbs_on-N_03.png", "canvas_arrow-right-D": "Media\/canvas_arrow-right-D_03.png", "canvas_transport-left-D": "Media\/canvas_transport-left-D_03.png", "canvas_add": "Media\/canvas_add_03.png", "canvas_subscribe": "Media\/canvas_subscribe_03.png"}, "showSubscribe": false, "gridID": "id2", "showBackToIndex": false, "showSlideshow": false, "feedURL": "http:\/\/EURS\/EU_Rap_Show___Playlist___EURapShow_files\/rss.xml", "mediaIndex": false, "entryCount": "0", "entriesPerPage": 105});
 //--><!]]></script>
           <div class="com-apple-iweb-widget-detailview" id="widget1" style="height: 2741px; left: 74px; position: absolute; top: 312px; width: 680px; z-index: 1; ">
             <div id="widget1-thumbnails_back" class="thumbnail_arrows thumbnails_back">
@@ -455,8 +455,8 @@ new Paste('widget4', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           
 
 
-          <div id="id6" style="height: 150px; left: 804px; position: absolute; top: 313px; width: 169px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
-            <div class="text-content graphic_textbox_layout_style_default_External_169_150" style="padding: 0px; ">
+          <div id="id6" style="height: 211px; left: 804px; position: absolute; top: 313px; width: 202px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
+            <div class="text-content graphic_textbox_layout_style_default_External_202_211" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_2">Latest Episode:<br /></p>
                 <p class="paragraph_style_3"><br /></p>
@@ -464,7 +464,9 @@ new Paste('widget4', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_2">Next Episode:</p>
+                <p class="paragraph_style_2">Next Episode:<br /></p>
+                <p class="paragraph_style_2"><br /></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_2">Thursday 16th February</p>
               </div>
             </div>
           </div>
@@ -478,7 +480,7 @@ new Paste('widget4', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
               </div>
             </div>
           </div>
-          <div class="com-apple-iweb-widget-HTMLRegion" id="widget5" style="height: 284px; left: 806px; opacity: 1.00; position: absolute; top: 656px; width: 300px; z-index: 1; ">
+          <div class="com-apple-iweb-widget-HTMLRegion" id="widget5" style="height: 381px; left: 805px; opacity: 1.00; position: absolute; top: 555px; width: 300px; z-index: 1; ">
             <script type="text/javascript"><!--//--><![CDATA[//><!--
     var widget5_htmlMarkupURL = ".//EU_Rap_Show___Playlist___EURapShow_files/widget5_markup.html";
 //--><!]]></script>
@@ -486,6 +488,15 @@ new Paste('widget4', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           </div>
           <script type="text/javascript"><!--//--><![CDATA[//><!--
 new Paste('widget5', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResources', '.', {"emptyLook": false});
+//--><!]]></script>
+          <div class="com-apple-iweb-widget-HTMLRegion" id="widget6" style="height: 60px; left: 807px; opacity: 1.00; position: absolute; top: 358px; width: 320px; z-index: 1; ">
+            <script type="text/javascript"><!--//--><![CDATA[//><!--
+    var widget6_htmlMarkupURL = ".//EU_Rap_Show___Playlist___EURapShow_files/widget6_markup.html";
+//--><!]]></script>
+            <div id="widget6-htmlRegion" class="html_region_widget"></div>
+          </div>
+          <script type="text/javascript"><!--//--><![CDATA[//><!--
+new Paste('widget6', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResources', '.', {"emptyLook": false});
 //--><!]]></script>
           <div style="height: 1000px; line-height: 1000px; " class="spacer"> </div>
         </div>
