--- a/EURS/EU_Rap_Show___Playlist___EURapShow_files/widget5_markup.html
+++ b/EURS/EU_Rap_Show___Playlist___EURapShow_files/widget5_markup.html
@@ -1,4 +1,2 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><title></title></head><body><!-- InstaWidget -->
-<a href="https://instawidget.net/v/user/eurapshow" id="link-01c2aed8f17e3b701476e2f98c91fdaeeba24d9bcdd90a1c022696d77a58f37f">@eurapshow</a>
-<script src="https://instawidget.net/js/instawidget.js?u=01c2aed8f17e3b701476e2f98c91fdaeeba24d9bcdd90a1c022696d77a58f37f&width=300px"></script></body></html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><title></title></head><body><iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3Aeurapshow%3Aplaylist%3A0kD1XgUKqiOZCxcKKj5BYe" width="300" height="380" frameborder="0" allowtransparency="true"></iframe></body></html>
