--- a/EURS/EU_Rap_Show___About___EURapShow.html
+++ b/EURS/EU_Rap_Show___About___EURapShow.html
@@ -108,8 +108,8 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           
 
 
-          <div id="id3" style="height: 150px; left: 794px; position: absolute; top: 363px; width: 169px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
-            <div class="text-content graphic_textbox_layout_style_default_External_169_150" style="padding: 0px; ">
+          <div id="id3" style="height: 190px; left: 794px; position: absolute; top: 363px; width: 293px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
+            <div class="text-content graphic_textbox_layout_style_default_External_293_190" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_2">Latest Episode:<br /></p>
                 <p class="paragraph_style_3"><br /></p>
@@ -117,7 +117,9 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_2">Next Episode:</p>
+                <p class="paragraph_style_2">Next Episode:<br /></p>
+                <p class="paragraph_style_2"><br /></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_2">Thursday 16th February</p>
               </div>
             </div>
           </div>
@@ -153,6 +155,15 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
               </div>
             </div>
           </div>
+          <div class="com-apple-iweb-widget-HTMLRegion" id="widget3" style="height: 60px; left: 795px; opacity: 1.00; position: absolute; top: 408px; width: 320px; z-index: 1; ">
+            <script type="text/javascript"><!--//--><![CDATA[//><!--
+    var widget3_htmlMarkupURL = ".//EU_Rap_Show___About___EURapShow_files/widget3_markup.html";
+//--><!]]></script>
+            <div id="widget3-htmlRegion" class="html_region_widget"></div>
+          </div>
+          <script type="text/javascript"><!--//--><![CDATA[//><!--
+new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResources', '.', {"emptyLook": false});
+//--><!]]></script>
           <div style="height: 1000px; line-height: 1000px; " class="spacer"> </div>
         </div>
         <div style="height: 300px; margin-left: 0px; position: relative; width: 1200px; z-index: 15; " id="footer_layer">
