--- a/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow_files/widget3_markup.html
+++ b/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow_files/widget3_markup.html
@@ -1,4 +1,2 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><title></title></head><body><!-- InstaWidget -->
-<a href="https://instawidget.net/v/user/eurapshow" id="link-01c2aed8f17e3b701476e2f98c91fdaeeba24d9bcdd90a1c022696d77a58f37f">@eurapshow</a>
-<script src="https://instawidget.net/js/instawidget.js?u=01c2aed8f17e3b701476e2f98c91fdaeeba24d9bcdd90a1c022696d77a58f37f&width=300px"></script></body></html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><title></title></head><body><iframe width="320" height="60" src="https://www.mixcloud.com/widget/iframe/?feed=https%3A%2F%2Fwww.mixcloud.com%2FEURapShow%2Feu-rap-show-eurs-episode-1%2F&hide_cover=1&mini=1&light=1" frameborder="0"></iframe></body></html>
