Really bed time

--- a/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow.html
+++ b/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow.html
@@ -177,7 +177,7 @@ new Paste('widget3', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
           <div id="id6" style="height: 42px; left: 85px; position: absolute; top: 383px; width: 666px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_666_42" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_4">EU Rap Show is the vision and creation of Slim Jones. The show broadcasts weekly on Thursdays at 6pm GMT. <a onclick="window.open(this.href); return false;" title="http://twitter.com/eurapshow" href="http://twitter.com/eurapshow" onkeypress="window.open(this.href); return false;">@EURapShow</a></p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_4">EU Rap Show is the vision and creation of Slim Jones. The show broadcasts live weekly on Thursdays at 6pm GMT. </p>
               </div>
             </div>
           </div>
