--- a/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow.html
+++ b/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow.html
@@ -174,7 +174,7 @@ new Paste('widget2', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
           <script type="text/javascript"><!--//--><![CDATA[//><!--
 new Paste('widget3', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/SharedResources', '..', {"emptyLook": false});
 //--><!]]></script>
-          <div id="id6" style="height: 42px; left: 85px; position: absolute; top: 383px; width: 666px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
+          <div id="id6" style="height: 42px; left: 85px; position: absolute; top: 315px; width: 666px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_666_42" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_4">EU Rap Show is the vision and creation of Slim Jones. The show broadcasts live weekly on Thursdays at 6pm GMT. </p>
@@ -184,11 +184,11 @@ new Paste('widget3', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
           
 
 
-          <div id="id7" style="height: 469px; left: 89px; position: absolute; top: 471px; width: 504px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
-            <div class="text-content graphic_textbox_layout_style_default_External_504_469" style="padding: 0px; ">
+          <div id="id7" style="height: 523px; left: 786px; position: absolute; top: 562px; width: 245px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
+            <div class="text-content graphic_textbox_layout_style_default_External_245_523" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="Body"><span class="style">EU RAP SHOW PRESENTS:</span> <span class="style_1">EPISODE 1</span><br /></p>
-                <div class="paragraph Body"><div style="height: 432px; width: 432px;  clear: left; float: left; height: 432px; margin: 6px 6px 6px 0px; position: relative; width: 432px; " class="tinyText style_SkipStroke_3 inline-block stroke_0"><a href="../EU_Rap_Show___Episodes___EURapShow/EU_Rap_Show___Episodes___EURapShow.html" title="../EU_Rap_Show___Episodes___EURapShow/EU_Rap_Show___Episodes___EURapShow.html"><img src="EU_Rap_Show___Home___EURapShow_files/EU%20Rap%20Albums6.jpg" alt="" style="border: none; height: 432px; width: 432px; " /></a></div><br /></div>
+                <div class="paragraph Body"><div style="height: 235px; width: 235px;  clear: left; float: left; height: 235px; margin: 6px 6px 6px 0px; position: relative; width: 235px; " class="tinyText style_SkipStroke_3 inline-block stroke_0"><a href="../EU_Rap_Show___Episodes___EURapShow/EU_Rap_Show___Episodes___EURapShow.html" title="../EU_Rap_Show___Episodes___EURapShow/EU_Rap_Show___Episodes___EURapShow.html"><img src="EU_Rap_Show___Home___EURapShow_files/EU%20Rap%20Albums6.jpg" alt="" style="border: none; height: 236px; width: 236px; " /></a></div><br /></div>
                 <p class="Body"><br /></p>
                 <p class="Body"><br /></p>
                 <p class="Body"><br /></p>
@@ -202,7 +202,16 @@ new Paste('widget3', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/Shared
               <div style="clear: both; height: 0px; line-height: 0px; " class="tinyText"> </div>
             </div>
           </div>
-          <div style="height: 765px; line-height: 765px; " class="spacer"> </div>
+          <div class="com-apple-iweb-widget-HTMLRegion" id="widget4" style="height: 550px; left: 88px; opacity: 1.00; position: absolute; top: 368px; width: 660px; z-index: 1; ">
+            <script type="text/javascript"><!--//--><![CDATA[//><!--
+    var widget4_htmlMarkupURL = "../EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow_files/widget4_markup.html";
+//--><!]]></script>
+            <div id="widget4-htmlRegion" class="html_region_widget"></div>
+          </div>
+          <script type="text/javascript"><!--//--><![CDATA[//><!--
+new Paste('widget4', '../Scripts/Widgets/HTMLRegion', '../Scripts/Widgets/SharedResources', '..', {"emptyLook": false});
+//--><!]]></script>
+          <div style="height: 850px; line-height: 850px; " class="spacer"> </div>
         </div>
         <div style="height: 300px; margin-left: 0px; position: relative; width: 1200px; z-index: 15; " id="footer_layer">
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
