--- a/EURS/📻_EU_Rap_Show___About___EURapShow.html
+++ b/EURS/📻_EU_Rap_Show___About___EURapShow.html
@@ -111,15 +111,15 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id3" style="height: 190px; left: 794px; position: absolute; top: 363px; width: 293px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_293_190" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_2">Latest Episode:<br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_2">LATEST:<br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
-                <p class="paragraph_style_2">Next Episode:<br /></p>
+                <p class="paragraph_style_2">NEXT:<br /></p>
                 <p class="paragraph_style_2"><br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_2">Thursday 16th February</p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_4">Thursday 16th February</p>
               </div>
             </div>
           </div>
@@ -135,23 +135,23 @@ new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id4" style="height: 559px; left: 77px; position: absolute; top: 394px; width: 594px; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_594_559" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_4">1. EURS<br /></p>
-                <p class="paragraph_style_4">2. EURAP SHOW<br /></p>
-                <p class="paragraph_style_4">3. European Urban Rap Show<br /></p>
-                <p class="paragraph_style_5"><br /></p>
-                <p class="paragraph_style_5">The EU Rap Show is curated and presented by Slim Jones: The European Rap Specialist.<br /></p>
-                <p class="paragraph_style_5"><br /></p>
-                <p class="paragraph_style_5">The show can be listened to live at 6pm Thursdays GMT and on-demand on this website. <br /></p>
-                <p class="paragraph_style_5"><br /></p>
-                <p class="paragraph_style_6">About The EU Rap Show<br /></p>
-                <p class="paragraph_style_7">Founded in 2016 in London, UK Slim Jones’ EU Rap Show is about putting European Rap on the map where is belongs.<br /></p>
-                <p class="paragraph_style_8">The EU Rap Show provides a platform for spreading and sharing European Rap-centric music, playing the best selection of urban music from all-European Union member states and beyond.<br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_5">1. EURS<br /></p>
+                <p class="paragraph_style_5">2. EURAP SHOW<br /></p>
+                <p class="paragraph_style_5">3. European Urban Rap Show<br /></p>
+                <p class="paragraph_style_6"><br /></p>
+                <p class="paragraph_style_6">The EU Rap Show is curated and presented by Slim Jones: The European Rap Specialist.<br /></p>
+                <p class="paragraph_style_6"><br /></p>
+                <p class="paragraph_style_6">The show can be listened to live at 6pm Thursdays GMT and on-demand on this website. <br /></p>
+                <p class="paragraph_style_6"><br /></p>
+                <p class="paragraph_style_7">About The EU Rap Show<br /></p>
+                <p class="paragraph_style_8">Founded in 2016 in London, UK Slim Jones’ EU Rap Show is about putting European Rap on the map where is belongs.<br /></p>
+                <p class="paragraph_style_9">The EU Rap Show provides a platform for spreading and sharing European Rap-centric music, playing the best selection of urban music from all-European Union member states and beyond.<br /></p>
+                <p class="paragraph_style_9"><br /></p>
+                <p class="paragraph_style_7">About Slim Jones<br /></p>
+                <p class="paragraph_style_8">“Slim Jones, aka The European Rap Specialist, is synonymous with the biggest hip-hop culture DJ and tastemaker for urban music in Europe” - Marylyn Tan - Singapore Press.<br /></p>
                 <p class="paragraph_style_8"><br /></p>
-                <p class="paragraph_style_6">About Slim Jones<br /></p>
-                <p class="paragraph_style_7">“Slim Jones, aka The European Rap Specialist, is synonymous with the biggest hip-hop culture DJ and tastemaker for urban music in Europe” - Marylyn Tan - Singapore Press.<br /></p>
-                <p class="paragraph_style_7"><br /></p>
-                <p class="paragraph_style_8">Slim Jones is a dynamic young broadcaster, DJ and producer who can currently be heard on East London Radio and TalkRadio with Jon Holmes. <br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_7">Born in London, England to Jamaican parents, Slim has been surrounded by music from birth. On a teenage trip to France and Portugal, she realised the lamentable lack of crossover of European rap to the UK market, and so decided to start the EU Rap show, showcasing the best verses, delivery, and beats from all across the European continent. Slim has since studied languages and rap music, giving credibility to her title as the European Rap Specialist.</p>
+                <p class="paragraph_style_9">Slim Jones is a dynamic young broadcaster, DJ and producer who can currently be heard on East London Radio and TalkRadio with Jon Holmes. <br /></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_8">Born in London, England to Jamaican parents, Slim has been surrounded by music from birth. On a teenage trip to France and Portugal, she realised the lamentable lack of crossover of European rap to the UK market, and so decided to start the EU Rap show, showcasing the best verses, delivery, and beats from all across the European continent. Slim has since studied languages and rap music, giving credibility to her title as the European Rap Specialist.</p>
               </div>
             </div>
           </div>
@@ -185,8 +185,8 @@ new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id6" style="height: 53px; left: 368px; position: absolute; top: 243px; width: 471px; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_471_53" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_9">  2017 SLIM JONES ENTERTAiNMENT ALL RIGHTS RESERVED.<br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_9">                            Privacy Policy | Terms &amp; Conditions </p>
+                <p style="padding-top: 0pt; " class="paragraph_style_10">  2017 SLIM JONES ENTERTAiNMENT ALL RIGHTS RESERVED.<br /></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_10">                            Privacy Policy | Terms &amp; Conditions </p>
               </div>
             </div>
           </div>
@@ -196,10 +196,10 @@ new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id7" style="height: 108px; left: 68px; position: absolute; top: 39px; width: 100px; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_100_108" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_10">NAVIGATION<span style="line-height: 24px; " class="style"><br /></span></p>
-                <p class="paragraph_style_11"><a class="class6" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p class="paragraph_style_12"><a class="class7" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_12"><a class="class8" title="📻_EU_Rap_Show___Playlist___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_11">NAVIGATION<span style="line-height: 24px; " class="style"><br /></span></p>
+                <p class="paragraph_style_12"><a class="class6" title="📻_EU_Rap_Show___Home___EURapShow/📻_EU_Rap_Show___Home___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Home___EURapShow.html">HOME</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_13"><a class="class7" title="📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow/%F0%9F%93%BB_EU_Rap_Show___Episodes___EURapShow.html">EPISODES</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_13"><a class="class8" title="📻_EU_Rap_Show___Playlist___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow.html">PLAYLIST</a></p>
               </div>
             </div>
           </div>
@@ -209,11 +209,11 @@ new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id8" style="height: 131px; left: 231px; position: absolute; top: 35px; width: 100px; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_100_131" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_13"><span class="style_1">SOCIALISE WITH SLIM</span>  <br /></p>
-                <p class="paragraph_style_14"><a title="https://itunes.apple.com/gb/app/link-up-tv-free-music-mixtapes/id616072671?mt=8" href="https://itunes.apple.com/gb/app/link-up-tv-free-music-mixtapes/id616072671?mt=8"><br /></a></p>
-                <p class="paragraph_style_15"><br /></p>
-                <p class="paragraph_style_15"><br /></p>
-                <p class="paragraph_style_15"><br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_14"><span class="style_1">SOCIALISE WITH SLIM</span>  <br /></p>
+                <p class="paragraph_style_15"><a title="https://itunes.apple.com/gb/app/link-up-tv-free-music-mixtapes/id616072671?mt=8" href="https://itunes.apple.com/gb/app/link-up-tv-free-music-mixtapes/id616072671?mt=8"><br /></a></p>
+                <p class="paragraph_style_16"><br /></p>
+                <p class="paragraph_style_16"><br /></p>
+                <p class="paragraph_style_16"><br /></p>
               </div>
             </div>
           </div>
@@ -223,10 +223,10 @@ new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id9" style="height: 165px; left: 366px; position: absolute; top: 33px; width: 253px; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_253_165" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_16">BE ON EU RAP SHOW<span style="line-height: 24px; " class="style"><br /></span></p>
-                <p class="paragraph_style_17"><a class="class9" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">APPEAR ON FREESTYLE SHOW</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p class="paragraph_style_17"><a class="class10" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR BEAT</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_17"><a class="class11" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR MIXTAPE</a></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_17">BE ON EU RAP SHOW<span style="line-height: 24px; " class="style"><br /></span></p>
+                <p class="paragraph_style_18"><a class="class9" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">APPEAR ON FREESTYLE SHOW</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_18"><a class="class10" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR BEAT</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_18"><a class="class11" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">SUBMIT YOUR MIXTAPE</a></p>
               </div>
             </div>
           </div>
@@ -236,11 +236,11 @@ new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id10" style="height: 160px; left: 666px; position: absolute; top: 33px; width: 100px; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_100_160" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_16">OTHER LINKS<span style="line-height: 24px; " class="style"><br /></span></p>
-                <p class="paragraph_style_17"><a class="class12" title="" href="">ABOUT</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p class="paragraph_style_17"><a class="class13" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">ADVERTISE</a><span style="line-height: 28px; " class="style"><br /></span></p>
-                <p class="paragraph_style_17"><a class="class14" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a><br /></p>
-                <p class="paragraph_style_17"><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_17">OTHER LINKS<span style="line-height: 24px; " class="style"><br /></span></p>
+                <p class="paragraph_style_18"><a class="class12" title="" href="">ABOUT</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_18"><a class="class13" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">ADVERTISE</a><span style="line-height: 28px; " class="style"><br /></span></p>
+                <p class="paragraph_style_18"><a class="class14" title="📻_EU_Rap_Show___Contact___EURapShow.html" href="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow.html">CONTACT</a><br /></p>
+                <p class="paragraph_style_18"><span style="line-height: 28px; " class="style"><br /></span></p>
               </div>
             </div>
           </div>
@@ -250,8 +250,8 @@ new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id11" style="height: 100px; left: 818px; position: absolute; top: 30px; width: 100px; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_100_100" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_16">CAREERS<span style="line-height: 24px; " class="style"><br /></span></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_18">Click <a onclick="window.open(this.href); return false;" title="http://eastlondonradio.org.uk/?page_id=83" href="http://eastlondonradio.org.uk/?page_id=83" onkeypress="window.open(this.href); return false;" class="class15">here</a> to visit the East London Radio careers section</p>
+                <p style="padding-top: 0pt; " class="paragraph_style_17">CAREERS<span style="line-height: 24px; " class="style"><br /></span></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_19">Click <a onclick="window.open(this.href); return false;" title="http://eastlondonradio.org.uk/?page_id=83" href="http://eastlondonradio.org.uk/?page_id=83" onkeypress="window.open(this.href); return false;" class="class15">here</a> to visit the East London Radio careers section</p>
               </div>
             </div>
           </div>
@@ -259,13 +259,13 @@ new Paste('widget3', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
 
 
           <div style="height: 30px; width: 30px;  height: 30px; left: 234px; position: absolute; top: 93px; width: 30px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
-            <img src="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow_files/droppedImage_1.png" alt="" style="border: none; height: 30px; width: 30px; " />
+            <a href="http://twitter.com/eurapshow/" title="http://twitter.com/eurapshow/"><img src="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow_files/droppedImage_1.png" alt="" style="border: none; height: 30px; width: 30px; " /></a>
           </div>
           
 
 
           <div style="height: 32px; width: 32px;  height: 32px; left: 274px; position: absolute; top: 93px; width: 32px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
-            <img src="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow_files/droppedImage_2.png" alt="" style="border: none; height: 32px; width: 32px; " />
+            <a href="http://instagram.com/eurapshow/" title="http://instagram.com/eurapshow/" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;"><img src="%F0%9F%93%BB_EU_Rap_Show___About___EURapShow_files/droppedImage_2.png" alt="" style="border: none; height: 32px; width: 32px; " /></a>
           </div>
           
 
