--- a/EURS/📻_EU_Rap_Show___Playlist___EURapShow.html
+++ b/EURS/📻_EU_Rap_Show___Playlist___EURapShow.html
@@ -458,13 +458,13 @@ new Paste('widget4', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id6" style="height: 211px; left: 804px; position: absolute; top: 313px; width: 202px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_202_211" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_2">Latest Episode:<br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_2">LATEST:<br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
                 <p class="paragraph_style_3"><br /></p>
-                <p class="paragraph_style_2">Next Episode:<br /></p>
+                <p class="paragraph_style_2">NEXT:<br /></p>
                 <p class="paragraph_style_2"><br /></p>
                 <p style="padding-bottom: 0pt; " class="paragraph_style_2">Thursday 16th February</p>
               </div>
@@ -584,13 +584,13 @@ new Paste('widget5', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
 
 
           <div style="height: 30px; width: 30px;  height: 30px; left: 234px; position: absolute; top: 93px; width: 30px; z-index: 1; " class="tinyText style_SkipStroke_3 stroke_0">
-            <img src="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow_files/droppedImage_1.png" alt="" style="border: none; height: 30px; width: 30px; " />
+            <a href="http://twitter.com/eurapshow/" title="http://twitter.com/eurapshow/"><img src="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow_files/droppedImage_1.png" alt="" style="border: none; height: 30px; width: 30px; " /></a>
           </div>
           
 
 
           <div style="height: 32px; width: 32px;  height: 32px; left: 274px; position: absolute; top: 93px; width: 32px; z-index: 1; " class="tinyText style_SkipStroke_3 stroke_0">
-            <img src="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow_files/droppedImage_2.png" alt="" style="border: none; height: 32px; width: 32px; " />
+            <a href="http://instagram.com/eurapshow/" title="http://instagram.com/eurapshow/" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;"><img src="%F0%9F%93%BB_EU_Rap_Show___Playlist___EURapShow_files/droppedImage_2.png" alt="" style="border: none; height: 32px; width: 32px; " /></a>
           </div>
           
 
