--- a/EURS/📻_EU_Rap_Show___Contact___EURapShow.html
+++ b/EURS/📻_EU_Rap_Show___Contact___EURapShow.html
@@ -161,14 +161,20 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <script type="text/javascript"><!--//--><![CDATA[//><!--
 new Paste('widget2', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResources', '.', {"emptyLook": false});
 //--><!]]></script>
-          <div style="height: 172px; width: 172px;  height: 172px; left: 451px; position: absolute; top: 484px; width: 172px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
-            <a href="http://twitter.com/eurapshow" title="http://twitter.com/eurapshow" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;"><img src="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow_files/droppedImage_1.png" alt="" style="border: none; height: 172px; width: 172px; " /></a>
+          <div style="height: 111px; width: 111px;  height: 111px; left: 451px; position: absolute; top: 484px; width: 111px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
+            <a href="http://twitter.com/eurapshow" title="http://twitter.com/eurapshow" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;"><img src="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow_files/droppedImage_1.png" alt="" style="border: none; height: 111px; width: 111px; " /></a>
           </div>
           
 
 
-          <div style="height: 168px; width: 168px;  height: 168px; left: 451px; position: absolute; top: 713px; width: 168px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
-            <a href="http://instagram.com/eurapshow" title="http://instagram.com/eurapshow" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;"><img src="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow_files/droppedImage_2.png" alt="" style="border: none; height: 168px; width: 168px; " /></a>
+          <div style="height: 98px; width: 98px;  height: 98px; left: 444px; position: absolute; top: 630px; width: 98px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
+            <a href="http://instagram.com/eurapshow" title="http://instagram.com/eurapshow" onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;"><img src="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow_files/droppedImage_2.png" alt="" style="border: none; height: 98px; width: 98px; " /></a>
+          </div>
+          
+
+
+          <div style="height: 99px; width: 99px;  height: 99px; left: 443px; position: absolute; top: 782px; width: 99px; z-index: 1; " class="tinyText style_SkipStroke_1 stroke_0">
+            <a href="http://mixcloud.com/eurapshow" title="http://mixcloud.com/eurapshow"><img src="%F0%9F%93%BB_EU_Rap_Show___Contact___EURapShow_files/mixcloud.jpg" alt="" style="border: none; height: 99px; width: 99px; " /></a>
           </div>
           <div style="height: 1000px; line-height: 1000px; " class="spacer"> </div>
         </div>
